; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_os_msdos.c_mywindow.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_os_msdos.c_mywindow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_iLeft = common dso_local global i32 0, align 4
@S_iTop = common dso_local global i32 0, align 4
@S_iRight = common dso_local global i32 0, align 4
@S_iBottom = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @mywindow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mywindow(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %5, align 4
  store i32 %9, i32* @S_iLeft, align 4
  %10 = load i32, i32* %6, align 4
  store i32 %10, i32* @S_iTop, align 4
  %11 = load i32, i32* %7, align 4
  store i32 %11, i32* @S_iRight, align 4
  %12 = load i32, i32* %8, align 4
  store i32 %12, i32* @S_iBottom, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @window(i32 %13, i32 %14, i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @window(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
